# ppconsul

./: .gitignore  CMakeLists.txt  ConcatenatedStrings  README.md  TODO.txt  build.gradle  conanfile.txt  gradlew  notes.txt  ppconsul.pc.in  rationales.md  status.md
ext/b64/: README.md  cencode.c  cencode.h
ext/catch/: README.md  catch.hpp
ext/json11/: CMakeLists.txt  README.md  json11.cpp  json11.hpp  json11.pc.in
gradle/wrapper/: gradle-wrapper.properties
include/ppconsul/: agent.h  catalog.h  client.h  client_pool.h  config.h  consul.h  coordinate.h  error.h  health.h  helpers.h  http_client.h  http_status.h  json.h  kv.h  kwargs.h  param.h  parameters.h  ppconsul.h  response.h  sessions.h  status.h  types.h
include/ppconsul/http/: http_client.h  status.h
ppconsul/: CMakeLists.txt  consul.cpp  health.cpp  helpers.cpp  ppconsul.pc.in  s11n_types.h
src/: .gitignore  CMakeLists.txt  agent.cpp  all_clients.h  catalog.cpp  client_pool.cpp  consul.cpp  coordinate.cpp  health.cpp  helpers.cpp  http_client.cpp  http_client.h  http_client_curl.cpp  http_client_curl.h  http_client_impl.inl  http_client_impl_curl.inl  http_client_impl_netlib.h  http_client_impl_netlib.inl  http_client_netlib.cpp  http_client_netlib.h  http_helpers.h  json.h  kv.cpp  main.cpp  parameters.cpp  ppconsul.pc.in  s11n.h  s11n_types.h  sessions.cpp  status.cpp
src/curl/: http_client.cpp  http_client.h
src/netlib/: http_client.cpp  http_client.h
tests/: CMakeLists.txt  ca.cfg  consul.cpp  consul.json.in  consul_get_app.cpp  create-ssl.sh  helpers.cpp  http_client.cpp  kv.cpp  main.cpp  parameters.cpp  ppconsul_simple_test.cpp  test-consul.bat  test-consul.sh  test_consul.h
tests/agent/: CMakeLists.txt  agent_checks_tests.cpp  agent_other_tests.cpp  agent_services_tests.cpp
tests/catalog/: CMakeLists.txt  catalog_tests.cpp
tests/consul/: CMakeLists.txt  consul_tests.cpp
tests/consul-get/: CMakeLists.txt  consul_get.cpp
tests/consul-get-app/: CMakeLists.txt
tests/consul-tests/: CMakeLists.txt  agent_checks_tests.cpp  agent_other_tests.cpp  agent_services_tests.cpp  catalog_tests.cpp  chrono_io.h  health_tests.cpp  kv_tests.cpp  test_consul.h
tests/coordinate/: CMakeLists.txt  coordinate_tests.cpp
tests/doc_examples/: CMakeLists.txt  agent.cpp  kv.cpp
tests/health/: CMakeLists.txt  health_tests.cpp
tests/kv/: CMakeLists.txt  kv_tests.cpp
tests/sessions/: CMakeLists.txt  sessions_tests.cpp
tests/status/: CMakeLists.txt  status_tests.cpp
tests/tests-consul/: CMakeLists.txt  agent_checks_tests.cpp  agent_other_tests.cpp  agent_services_tests.cpp  agent_tests.cpp  kv_tests.cpp  test_consul.h
tests/unittests/: CMakeLists.txt  consul.cpp  helpers.cpp  main.cpp  parameters.cpp
